# clibsedml

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  INSTALL  LICENSE  Makefile.am  README  clibsedml.pc.in  clibsedml.spec.in  config.h.in  configure.ac  flake.nix
.github/workflows/: ci.yml
debian/: changelog  control  copyright  libsedml-dev.install  libsedml0.install  rules
doc/: coding-style.txt  coding_style.txt  release-procedure.org
src/: CMakeLists.txt  Makefile.am  document.c  mathml.c  mathml.txt  reader.c  writer.c  xhtml.c
src/sedml/: common.h  document.h  mathml.h  reader.h  version.h  writer.h  xhtml.h
test/: CMakeLists.txt  Makefile.am  check_document.c  check_mathml.c  check_reader.c  check_reader1.c  check_reader2.c  check_reader_l1v3_ikappab.c  check_reader_l1v3_leloup.c  check_reader_l1v3_lorenz_cellml.c  check_reader_l1v3_lorenz_sbml.c  check_reader_l1v3_oscli.c  check_reader_l1v3_parameter.c  check_rw.c  check_writer.c
test/data/: README  example1.xml  example2.xml
test/tmp/: README
tests/: Makefile.am  check_reader.c  check_rw.c  check_writer.c
tests/data/: README
